qas-source/backend-test/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: backendmutosi-test-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    name: port80
    targetPort: 80
    protocol: TCP
    nodePort: 30702
  selector:
    app: backendmutosi-test
